Structure for the reports is improved.